# jirani-rust

./: CAPSTONE_SPEC.md  Cargo.toml  README.md  docker-compose.yml
docs/: ANDROID_INTEGRATION.md  COMMUNICATION.md
src/: auth.rs  lib.rs  main.rs  models.rs  routes.rs  store.rs
tests/: sync_envelopes.rs
