[package]
name = "jirani-rust"
version = "0.1.0"
edition = "2021"
description = "Optional Rust/Rocket gateway for Jirani minimized report sync."
license = "MIT"

[dependencies]
hex = "0.4"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.7", default-features = false, features = ["json", "postgres", "runtime-tokio-rustls"] }
time = "=0.3.36"

[dev-dependencies]
tempfile = "3"
